# SnakeGame

./: CMakeLists.txt  README.md
src/: curses_tui.cpp  game.cpp  mechanics.cpp  reward.cpp  snake.cpp
src/include/: curses_tui.h  mechanics.h  reward.h  snake.h
